--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,5 @@ forge_version = 11.14.3.1487
 
 mod_version = 1.5.07.29a
 
+org.gradle.jvmargs=-Xmx2G
 #client_game_args = --tweakClass org.spongepowered.asm.launch.MixinTweaker
