--- a/src/main/resources/chroma_at.cfg
+++ b/src/main/resources/chroma_at.cfg
@@ -5,4 +5,8 @@ public net.minecraft.client.renderer.EntityRenderer field_147707_d # theShaderGr
 public net.minecraft.client.shader.ShaderGroup field_148034_c # shaderGroupName
 public net.minecraft.entity.EntityLivingBase field_82180_bT #previousEquipment
 public net.minecraft.client.renderer.EntityRenderer func_175069_a(Lnet/minecraft/util/ResourceLocation;)V  # loadShader
-public net.minecraft.entity.Entity * #Everything
+public net.minecraft.potion.PotionEffect field_76460_b #duration
+public net.minecraft.entity.Entity field_70178_ae #isImmuneToFire
+public net.minecraft.entity.Entity func_70105_a(FF)V #setSize
+public net.minecraft.entity.monster.EntityZombie func_70105_a(FF)V #setSize
+public net.minecraft.entity.EntityAgeable func_70105_a(FF)V #setSize
